--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Make a copy of this file, rename it to .env and add your key. Remove this comment.
-EXA_API_KEY=""
+EXA_API_KEY="7d54acf0-d3e5-48b3-8e92-245fbcfaf854"
